Improve accordion list component - Collapse and expand dynamically to the items' heights: not a fixed height anymore - Allow text to wrap

--- a/src/app/common/accordion-list/accordion-list.component.scss
+++ b/src/app/common/accordion-list/accordion-list.component.scss
@@ -5,14 +5,19 @@ ion-list {
   .toggle-collapse-button {
     --background: var(--ion-color-light);
     --color: var(--ion-color-light-contrast);
+
+    ion-label {
+      white-space: normal;
+    }
+
     ion-icon {
-      transition: 0.2s ease-out;
+      transition: 0.2s ease;
       color: var(--ion-color-light-contrast);
     }
   }
 
   .list-item-container {
-    transition: 0.2s ease-out;
+    transition: 0.2s ease;
     background: var(--ion-color-light-tint);
   }
 }
